# portvilla_agent

./: .env.example  .gitignore  README.md  context.md  pyproject.toml
agent/: assistant.py  context.py  main.py  portfolio.py  prompts.py  ui_commands.py
docs/: prompt.md  tts_customisation.md
